# MultiTomo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
include/: multitomo.hpp
include/mt/: algorithms.hpp  data.hpp  definitions.hpp  exceptions.hpp  operators.hpp  pch.hpp  utilities.hpp
scripts/: build_vs2022.bat
src/: Algorithm.cpp  CMakeLists.txt  Data.cpp  DetectorGeometry.cpp  DetectorPath.cpp  Operator.cpp  Utilities.cpp  VolumeGeometry.cpp  algorithms.cpp  data.cpp  definitions.cpp  exceptions.cpp  operators.cpp  utilities.cpp
tests/: CMakeLists.txt  test_DetectorPath.cpp  test_VolumeGeometry.cpp  test_algorithms.cpp  test_data.cpp  test_exceptions.cpp  test_operators.cpp  test_utilities.cpp  tests.cpp  tests_DetectorGeometry.cpp  tests_Utilities.cpp  tests_VolumeGeometry.cpp
